--- a/locales/locales.xml
+++ b/locales/locales.xml
@@ -2,4 +2,5 @@
 ..\FrameXML\UI.xsd">
     <Script file="locale_zhCN.lua"/>
     <Script file="locale_enUS.lua"/>
+    <Script file="locale_ruRU.lua"/>
 </Ui>
